Исправления тестов из-за изменений в Timetable и добавления нового класса